# Skyhabit-tracker

./: .env.SAMPLE  Dockerfile  README.MD  docker-compose.yml  habit_fixture.json  pyproject.toml  readme.md  req.txt  requirements.txt  user_fixture.json
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
nginx/: nginx.conf
tracker/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
